# middleware/validate.js
@@ -1,0 +1,24 @@
+const validator = require('../helpers/validate');
+
+const saveBook = (req, res, next) => {
+    const validationRule = {
+        title: 'required|string',
+        author: 'required|string',
+        copyrightDate: 'string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if(!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
+module.exports = {
+    saveBook
+};
